# cas-hackathon-api

./: .gitignore  NewsItem.py  README.md  main.py  pyproject.toml  scraper.py  seed.py
examples/: README.md  app.py  nlp.py  requirements.txt  simple.py
