[tool.poetry]
name = "wcit-hackathon"
version = "0.1.0"
description = ""
authors = ["Timothy Clark <git@tdhc.uk>"]
readme = "README.md"
packages = [{include = "wcit_hackathon"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
fastapi = "^0.85.1"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
